[gd_scene load_steps=68 format=3 uid="uid://ynis5724ki4p"]

[ext_resource type="Shader" uid="uid://ipnmil7qfgkw" path="res://assets/shaders/space.gdshader" id="1_tbmy8"]
[ext_resource type="Texture2D" uid="uid://cbc4xku0yl8t6" path="res://icon.svg" id="2_jk1qb"]
[ext_resource type="Shader" uid="uid://b5qmx88ljbqfj" path="res://assets/shaders/outline.gdshader" id="3_5dd4i"]
[ext_resource type="Texture2D" uid="uid://bsng2jyed23xn" path="res://assets/planets/gima-l9.png" id="4_lgwnu"]
[ext_resource type="Shader" uid="uid://bbmu4nv82lq6b" path="res://assets/shaders/speedlines.gdshader" id="5_flqon"]
[ext_resource type="Script" uid="uid://dvri4et752r00" path="res://scripts/mainmenucamera.gd" id="6_rcqid"]
[ext_resource type="AudioStream" uid="uid://dyhdftfdyu4qu" path="res://assets/music/GameOver.mp3" id="7_1ajci"]
[ext_resource type="Script" uid="uid://byrnbv4st5kir" path="res://scripts/mainmenu.gd" id="8_7b55j"]
[ext_resource type="AudioStream" uid="uid://cyo74ba6ghimd" path="res://assets/sfx/WarpSound.mp3" id="9_jk1qb"]
[ext_resource type="AudioStream" uid="uid://csgvnc5t0s0ly" path="res://assets/sfx/WarpSound2.wav" id="10_5dd4i"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t5qbp"]
shader = ExtResource("1_tbmy8")
shader_parameter/bg_color = Color(0, 0, 0, 1)
shader_parameter/offset = Vector2(0, 0)
shader_parameter/bigStarSlow = 2.0
shader_parameter/mediumStarSlow = 6.0
shader_parameter/smallStarSlow = 8.0
shader_parameter/smallStarAmount = 0.002
shader_parameter/mediumStarAmount = 0.01
shader_parameter/bigStarAmount = 0.02

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y1kcc"]
shader = ExtResource("3_5dd4i")
shader_parameter/max_line_width = 5.0
shader_parameter/min_line_width = 1.0
shader_parameter/freq = 5.0
shader_parameter/block_size = 1.0
shader_parameter/starting_colour = Vector4(0, 0, 0, 0)
shader_parameter/ending_colour = Vector4(1, 1, 1, 0.2)

[sub_resource type="AtlasTexture" id="AtlasTexture_48q6x"]
atlas = ExtResource("4_lgwnu")
region = Rect2(0, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_a54ri"]
atlas = ExtResource("4_lgwnu")
region = Rect2(300, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_nys5g"]
atlas = ExtResource("4_lgwnu")
region = Rect2(600, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_iesih"]
atlas = ExtResource("4_lgwnu")
region = Rect2(900, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_itl7s"]
atlas = ExtResource("4_lgwnu")
region = Rect2(1200, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6dqj"]
atlas = ExtResource("4_lgwnu")
region = Rect2(1500, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfict"]
atlas = ExtResource("4_lgwnu")
region = Rect2(1800, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcfoj"]
atlas = ExtResource("4_lgwnu")
region = Rect2(2100, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_i63mq"]
atlas = ExtResource("4_lgwnu")
region = Rect2(2400, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_do071"]
atlas = ExtResource("4_lgwnu")
region = Rect2(2700, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjgqu"]
atlas = ExtResource("4_lgwnu")
region = Rect2(3000, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_niuoa"]
atlas = ExtResource("4_lgwnu")
region = Rect2(3300, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkkh5"]
atlas = ExtResource("4_lgwnu")
region = Rect2(3600, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_ho1sv"]
atlas = ExtResource("4_lgwnu")
region = Rect2(3900, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_minxm"]
atlas = ExtResource("4_lgwnu")
region = Rect2(4200, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0jkx"]
atlas = ExtResource("4_lgwnu")
region = Rect2(4500, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4g2b"]
atlas = ExtResource("4_lgwnu")
region = Rect2(4800, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2mtu"]
atlas = ExtResource("4_lgwnu")
region = Rect2(5100, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_tydqm"]
atlas = ExtResource("4_lgwnu")
region = Rect2(5400, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_yb7c4"]
atlas = ExtResource("4_lgwnu")
region = Rect2(5700, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_7071d"]
atlas = ExtResource("4_lgwnu")
region = Rect2(6000, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_hb54r"]
atlas = ExtResource("4_lgwnu")
region = Rect2(6300, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_81q6q"]
atlas = ExtResource("4_lgwnu")
region = Rect2(6600, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_dau8r"]
atlas = ExtResource("4_lgwnu")
region = Rect2(6900, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_1laou"]
atlas = ExtResource("4_lgwnu")
region = Rect2(7200, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjaej"]
atlas = ExtResource("4_lgwnu")
region = Rect2(7500, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqddt"]
atlas = ExtResource("4_lgwnu")
region = Rect2(7800, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2wp2"]
atlas = ExtResource("4_lgwnu")
region = Rect2(8100, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ccvu"]
atlas = ExtResource("4_lgwnu")
region = Rect2(8400, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6vee"]
atlas = ExtResource("4_lgwnu")
region = Rect2(8700, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbm34"]
atlas = ExtResource("4_lgwnu")
region = Rect2(9000, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_wknb4"]
atlas = ExtResource("4_lgwnu")
region = Rect2(9300, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_7sa1j"]
atlas = ExtResource("4_lgwnu")
region = Rect2(9600, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_m54y0"]
atlas = ExtResource("4_lgwnu")
region = Rect2(9900, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_4g7xv"]
atlas = ExtResource("4_lgwnu")
region = Rect2(10200, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2t6i"]
atlas = ExtResource("4_lgwnu")
region = Rect2(10500, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnuhf"]
atlas = ExtResource("4_lgwnu")
region = Rect2(10800, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_0e4ih"]
atlas = ExtResource("4_lgwnu")
region = Rect2(11100, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwbl5"]
atlas = ExtResource("4_lgwnu")
region = Rect2(11400, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qy7c"]
atlas = ExtResource("4_lgwnu")
region = Rect2(11700, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_km2id"]
atlas = ExtResource("4_lgwnu")
region = Rect2(12000, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_hndg0"]
atlas = ExtResource("4_lgwnu")
region = Rect2(12300, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqjoc"]
atlas = ExtResource("4_lgwnu")
region = Rect2(12600, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5o11"]
atlas = ExtResource("4_lgwnu")
region = Rect2(12900, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_xnhug"]
atlas = ExtResource("4_lgwnu")
region = Rect2(13200, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_7w2ba"]
atlas = ExtResource("4_lgwnu")
region = Rect2(13500, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_6k0st"]
atlas = ExtResource("4_lgwnu")
region = Rect2(13800, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_q386o"]
atlas = ExtResource("4_lgwnu")
region = Rect2(14100, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_261tr"]
atlas = ExtResource("4_lgwnu")
region = Rect2(14400, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_4i0yn"]
atlas = ExtResource("4_lgwnu")
region = Rect2(14700, 0, 300, 300)

[sub_resource type="SpriteFrames" id="SpriteFrames_c2ifh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_48q6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a54ri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nys5g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iesih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_itl7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6dqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfict")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcfoj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i63mq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_do071")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjgqu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_niuoa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkkh5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ho1sv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_minxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0jkx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4g2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2mtu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tydqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yb7c4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7071d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb54r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_81q6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dau8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1laou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjaej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqddt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2wp2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ccvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6vee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbm34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wknb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7sa1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m54y0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4g7xv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2t6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnuhf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0e4ih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwbl5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qy7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_km2id")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hndg0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqjoc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5o11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xnhug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7w2ba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6k0st")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q386o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_261tr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4i0yn")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_sryam"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_vx882"]
frequency = 0.02

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_p3seh"]
as_normal_map = true
bump_strength = 16.0
color_ramp = SubResource("Gradient_sryam")
noise = SubResource("FastNoiseLite_vx882")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8wwy5"]
shader = ExtResource("5_flqon")
shader_parameter/center = Vector2(0.75, 0.375)
shader_parameter/noise = SubResource("NoiseTexture2D_p3seh")
shader_parameter/sample_radius = 0.5
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/center_radius = 0.0

[node name="MainMenu" type="Node2D"]

[node name="Space" type="Sprite2D" parent="."]
z_index = -1
material = SubResource("ShaderMaterial_t5qbp")
position = Vector2(586.5, 337.5)
scale = Vector2(10.1641, 6.27344)
texture = ExtResource("2_jk1qb")

[node name="Gima-l9" type="AnimatedSprite2D" parent="."]
z_index = 1
material = SubResource("ShaderMaterial_y1kcc")
position = Vector2(923, 227)
scale = Vector2(1.251, 1.251)
sprite_frames = SubResource("SpriteFrames_c2ifh")
autoplay = "default"
frame_progress = 0.350687

[node name="SpeedLines" type="Sprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_8wwy5")
position = Vector2(586.5, 335.5)
scale = Vector2(10.1641, 6.24219)
texture = ExtResource("2_jk1qb")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(575, 325)
script = ExtResource("6_rcqid")

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_1ajci")
autoplay = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1153.0
offset_bottom = 650.0
script = ExtResource("8_7b55j")

[node name="StartButton" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 469.0
offset_top = 322.0
offset_right = -471.0
offset_bottom = -279.0
grow_horizontal = 2
grow_vertical = 2
text = "Start"

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="WarpSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_jk1qb")
volume_db = 15.0

[node name="WarpSFX2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_5dd4i")
volume_db = 15.0

[node name="WhiteScreen" type="ColorRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
z_index = 2
offset_left = -267.0
offset_top = -122.0
offset_right = 1468.0
offset_bottom = 833.0

[connection signal="pressed" from="Control/StartButton" to="Control" method="_on_start_button_pressed"]
